<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    android:background="@drawable/bg_gradient">

    <RelativeLayout android:id="@+id/mainContainer" android:layout_width="match_parent"
        android:layout_height="match_parent" android:visibility="visible">
        <LinearLayout android:id="@+id/addressContainer" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical"
            android:gravity="center">
            <TextView android:id="@+id/address" android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:textSize="24sp"
                android:text="@string/dhaka_bd"/>
            <TextView android:id="@+id/updated_at" android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:textSize="14sp"
                android:text="@string/_20_april_2012_20_08_pm"/>
        </LinearLayout>


        <LinearLayout android:id="@+id/overviewContainer" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical"
            android:layout_centerInParent="true">

            <TextView android:id="@+id/status" android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:textSize="18sp"
                android:layout_gravity="center"
                android:text="@string/clear_sky"/>
            <TextView android:id="@+id/temp" android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:textSize="90sp"
                android:fontFamily="sans-serif-thin" android:layout_gravity="center"
                android:text="@string/_29_c"/>

            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                android:orientation="horizontal" android:gravity="center">
                <TextView android:id="@+id/temp_min" android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:text="@string/min_temp_05_05_am"/>
                <Space android:layout_width="50dp" android:layout_height="wrap_content"/>

                <TextView android:id="@+id/temp_max" android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:text="@string/max_temp_05_05_pm"/>
            </LinearLayout>

        </LinearLayout>


        <LinearLayout android:id="@+id/detailsContainer" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical"
            android:layout_alignParentBottom="true">
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                android:orientation="horizontal" android:weightSum="3">
                <LinearLayout android:layout_width="0dp" android:layout_height="wrap_content"
                    android:orientation="vertical" android:layout_weight="1"
                    android:gravity="center" android:padding="8dp"
                    android:background="#3CF1EBF1">
                    <ImageView android:layout_width="25dp" android:layout_height="25dp"
                        android:src="@drawable/sunrise" android:tint="#FFFFFF"/>
                    <Space android:layout_width="wrap_content" android:layout_height="5dp"/>
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:textSize="12sp" android:text="@string/sunrise"/>
                    <TextView android:id="@+id/sunrise" android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:textSize="14sp"
                        android:text="@string/time"/>
                </LinearLayout>
                <Space android:layout_width="10dp" android:layout_height="wrap_content"/>
                <LinearLayout android:layout_width="0dp" android:layout_height="wrap_content"
                    android:orientation="vertical" android:layout_weight="1"
                    android:gravity="center" android:padding="8dp"
                    android:background="#3CF1EBF1">
                    <ImageView android:layout_width="25dp" android:layout_height="25dp"
                        android:src="@drawable/sunset" android:tint="#FFFFFF"/>
                    <Space android:layout_width="wrap_content" android:layout_height="5dp"/>
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:textSize="12sp" android:text="@string/sunset"/>
                    <TextView android:id="@+id/sunset" android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:textSize="14sp"
                        android:text="@string/time"/>
                </LinearLayout>
                <Space android:layout_width="10dp" android:layout_height="wrap_content"/>
                <LinearLayout android:layout_width="0dp" android:layout_height="wrap_content"
                    android:orientation="vertical" android:layout_weight="1"
                    android:gravity="center" android:padding="8dp"
                    android:background="#3CF1EBF1">
                    <ImageView android:layout_width="25dp" android:layout_height="25dp"
                        android:src="@drawable/wind" android:tint="#FFFFFF"/>
                    <Space android:layout_width="wrap_content" android:layout_height="5dp"/>
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:textSize="12sp" android:text="@string/wind"/>
                    <TextView android:id="@+id/wind" android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:textSize="14sp"
                        android:text="@string/time"/>
                </LinearLayout>
            </LinearLayout>

            <Space android:layout_width="wrap_content" android:layout_height="10dp"/>

            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                android:orientation="horizontal" android:weightSum="3">
                <LinearLayout android:layout_width="0dp" android:layout_height="wrap_content"
                    android:orientation="vertical" android:layout_weight="1"
                    android:gravity="center" android:padding="8dp"
                    android:background="#3CF1EBF1">
                    <ImageView android:layout_width="25dp" android:layout_height="25dp"
                        android:src="@drawable/pressure" android:tint="#FFFFFF"/>
                    <Space android:layout_width="wrap_content" android:layout_height="5dp"/>
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:textSize="12sp" android:text="@string/pressure"/>
                    <TextView android:id="@+id/pressure" android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:textSize="14sp"
                        android:text="@string/time"/>
                </LinearLayout>
                <Space android:layout_width="10dp" android:layout_height="wrap_content"/>
                <LinearLayout android:layout_width="0dp" android:layout_height="wrap_content"
                    android:orientation="vertical" android:layout_weight="1"
                    android:gravity="center" android:padding="8dp"
                    android:background="#3CF1EBF1">
                    <ImageView android:layout_width="25dp" android:layout_height="25dp"
                        android:src="@drawable/humidity" android:tint="#FFFFFF"/>
                    <Space android:layout_width="wrap_content" android:layout_height="5dp"/>
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:textSize="12sp" android:text="@string/humidity"/>
                    <TextView android:id="@+id/humidity" android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:textSize="14sp"
                        android:text="@string/time"/>
                </LinearLayout>
                <Space android:layout_width="10dp" android:layout_height="wrap_content"/>
                <LinearLayout android:layout_width="0dp" android:layout_height="wrap_content"
                    android:orientation="vertical" android:layout_weight="1"
                    android:gravity="center" android:padding="8dp"
                    android:background="#3CF1EBF1">
                    <ImageView android:layout_width="25dp" android:layout_height="25dp"
                        android:src="@drawable/info" android:tint="#FFFFFF"/>
                    <Space android:layout_width="wrap_content" android:layout_height="5dp"/>
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:textSize="12sp" android:text="@string/created_by"/>
                    <TextView android:id="@+id/about" android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:textSize="14sp"
                        android:text="@string/androdocs"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>


    <ProgressBar android:id="@+id/loader" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_centerInParent="true"
        android:visibility="gone"/>

    <TextView android:id="@+id/errorText" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_centerInParent="true"
        android:visibility="gone" android:text="@string/something_went_wrong"/>


</RelativeLayout>